fix(core/checkbox): allow multiline labels and align checkbox at the top (#1273)

--- a/packages/core/scss/components/_checkboxes.scss
+++ b/packages/core/scss/components/_checkboxes.scss
@@ -31,12 +31,9 @@
   [type='checkbox']:checked + label {
     position: relative;
     display: inline-flex;
-    align-items: center;
     user-select: none;
     color: var(--theme-checkbox-label--color);
-    height: $size;
-    min-height: $size;
-    max-height: $size;
+    min-height: 1.5rem;
   }
 
   [type='checkbox']:not(:disabled) + label {
@@ -53,6 +50,7 @@
     max-height: $size;
     float: left;
     margin-right: $small-space;
+    margin-top: 1px;
 
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -116,7 +114,7 @@
       border-bottom: 0.0625rem solid var(--theme-checkbox-checked--color);
       border-left: 0.0625rem solid var(--theme-checkbox-checked--color);
       position: absolute;
-      margin: 0.31rem 0.42rem 0.1875rem;
+      margin: 0.525rem 0.42rem 0.1875rem;
       transform: translate(-1px, -3px) rotate(-53deg) scale(2)
         skew(-8deg, -3deg);
     }
@@ -157,7 +155,7 @@
       height: 0.125rem;
       border-bottom: 0.125rem solid var(--theme-checkbox-mixed--color);
       position: absolute;
-      margin: 0 0 0 0.25rem;
+      margin: 0.5625rem 0 0 0.25rem;
     }
 
     & + label:before {
